<resources>
    <string name="app_name">그린거리</string>
    <string name="title_home">홈</string>
    <string name="main_reels">릴스</string>
    <string name="text_map">지도</string>
    <string name="text_post">게시물</string>
    <string name="text_my_info">내정보</string>
    <string name="text_add_post">게시물 추가</string>
    <string name="text_green_hero">이번주의 그린영웅</string>
    <string name="text_name_end_point">님</string>
    <string name="text_dummy_user_name">초록새싹</string>
    <string name="title_my_info">내정보</string>
    <string name="text_my_info_rank_cheer">1등이 되는 그날까지..!</string>
    <string name="text_my_town_rank">우리 동네 랭킹</string>
    <string name="text_profile">프로필</string>
    <string name="text_hero_title">칭호</string>
    <string name="text_my_posting">내 게시물</string>
    <string name="title_detail_post">상세 게시물</string>
    <string name="text_sympathy">공감해요!</string>
    <string name="text_detail">자세히 보기</string>
    <string name="text_before">BEFORE</string>
    <string name="tv_after">AFTER</string>
    <string name="text_resolved_post_desc">아름다워진 거리를 감상하세요!</string>
    <string name="text_comment">댓글</string>
    <string name="text_cider">사이다</string>
    <string name="title_detail_resolved_post">해결 게시물 상세 보기</string>
    <string name="text_do_post">게시</string>
    <string name="text_nick_name">닉네임</string>
    <string name="title_add_solution">해결 게시물 추가</string>
    <string name="text_input_title">제목을 입력해주세요</string>
    <string name="text_input_content">내용을 입력해주세요</string>
    <string name="text_add_solution">게시물 올리기</string>
</resources>