<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="kr.hs.dgsw.stac.greenstreet.features.solution.vm.AddSolutionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_base_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_top_bar"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:onClick="@{() -> vm.onClickBack()}"
                android:src="@drawable/ic_btn_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_title_detail_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_regular"
                android:includeFontPadding="false"
                android:text="@string/title_add_solution"
                android:textColor="@color/color_black_text"
                android:textSize="@dimen/title5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_top_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_before_after"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="W, 1:1.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_before"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="5dp"
                        app:cardCornerRadius="@dimen/card_corner"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toTopOf="@id/tv_before"
                        app:layout_constraintEnd_toStartOf="@id/card_after"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_before"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            tools:src="@drawable/dummy"
                            tools:ignore="ContentDescription" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_before"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_regular"
                        android:includeFontPadding="false"
                        android:text="@string/text_before"
                        android:textColor="@color/color_black_text"
                        android:textSize="@dimen/title7"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/card_before"
                        app:layout_constraintStart_toStartOf="@id/card_before"
                        app:layout_constraintTop_toBottomOf="@id/card_before" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_after"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="5dp"
                        app:cardCornerRadius="@dimen/card_corner"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toTopOf="@id/tv_after"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/card_before"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_after"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            tools:src="@drawable/dummy"
                            tools:ignore="ContentDescription" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_after"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_regular"
                        android:includeFontPadding="false"
                        android:text="@string/tv_after"
                        android:textColor="@color/color_black_text"
                        android:textSize="@dimen/title7"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/card_after"
                        app:layout_constraintStart_toStartOf="@id/card_after"
                        app:layout_constraintTop_toBottomOf="@id/card_after" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_title"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="@dimen/card_corner"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_before_after">

                    <EditText
                        android:id="@+id/et_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:background="@null"
                        android:fontFamily="@font/noto_regular"
                        android:hint="@string/text_input_title"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:text="@={vm.title}"
                        android:textColor="@color/color_black_text"
                        android:textSize="@dimen/title7" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_content"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="@dimen/card_corner"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_title">

                    <EditText
                        android:id="@+id/et_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|top"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:background="@null"
                        android:fontFamily="@font/noto_regular"
                        android:gravity="top"
                        android:hint="@string/text_input_content"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:text="@{vm.content}"
                        android:textColor="@color/color_black_text"
                        android:textSize="@dimen/title7" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/main"
                    app:cardCornerRadius="@dimen/card_corner"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_content">

                    <TextView
                        android:id="@+id/tv_add_solution"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/noto_medium"
                        android:includeFontPadding="false"
                        android:onClick="@{() -> vm.onClickAdd()}"
                        android:text="@string/text_add_solution"
                        android:textColor="@color/white"
                        android:textSize="@dimen/title6" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>