<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="kr.hs.dgsw.stac.greenstreet.features.post.add.AddPostViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/btn_back"
                layout="@layout/item_back_button"
                android:onClick="@{() -> vm.onClickBack()}" />

            <TextView
                android:id="@+id/tv_add_post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/noto_regular"
                android:includeFontPadding="false"
                android:text="@string/text_add_post"
                android:textColor="@color/black"
                android:textSize="@dimen/title5"
                app:layout_constraintEnd_toStartOf="@id/tv_add_post"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_add_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/noto_regular"
                android:includeFontPadding="false"
                android:text="게시"
                android:textColor="@color/main"
                android:textSize="@dimen/title5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_add_post_title" />

            <ImageView
                android:id="@+id/iv_user_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/default_margin"
                android:src="@drawable/ic_profile_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/noto_medium"
                android:includeFontPadding="false"
                android:text="@string/text_dummy_user_name"
                android:textColor="@color/black"
                android:textSize="@dimen/title4"
                app:layout_constraintBottom_toBottomOf="@id/iv_user_profile"
                app:layout_constraintStart_toEndOf="@id/iv_user_profile"
                app:layout_constraintTop_toTopOf="@id/iv_user_profile" />


            <TextView
                android:id="@+id/tv_user_name_end_point"
                android:text="@string/text_name_end_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_medium"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="@dimen/title4"
                app:layout_constraintBottom_toBottomOf="@id/tv_user_name"
                app:layout_constraintStart_toEndOf="@id/tv_user_name"
                app:layout_constraintTop_toTopOf="@id/tv_user_name" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/main"
                android:fontFamily="@font/noto_medium"
                android:hint="제목을 입력하세요"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/main"
                android:textSize="@dimen/title4"
                app:layout_constraintTop_toBottomOf="@id/iv_user_profile"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:fontFamily="@font/noto_regular"
                android:gravity="top"
                android:hint="내용을 적어주세요"
                android:includeFontPadding="false"
                android:minHeight="200dp"
                android:textColorHint="@color/color_gray"
                android:textSize="@dimen/title5"
                app:layout_constraintTop_toBottomOf="@id/et_title"
                android:importantForAutofill="no"
                android:inputType="text" />

            <ImageView
                android:id="@+id/btn_add_img"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_btn_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_contents"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/noto_regular"
                android:includeFontPadding="false"
                android:text="이미지 추가하기"
                android:textColor="@color/black"
                android:textSize="@dimen/title4"
                app:layout_constraintBottom_toBottomOf="@id/btn_add_img"
                app:layout_constraintStart_toEndOf="@id/btn_add_img"
                app:layout_constraintTop_toTopOf="@id/btn_add_img" />

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add_img"
                android:layout_marginTop="10dp"
                layout="@layout/item_small_line" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>